refactor(backend): reestruturar pacotes de testes e módulos, otimizar regras de IA e adicionar scripts de automação